--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,21 @@
-!!! 5
+!!!
 %html(lang="en")
   %head
+    %meta{charset: "utf-8"}
+    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
     %title Blog
+    / Le HTML5 shim, for IE6-8 support of HTML5 elements
+    /[if lt IE 9]
+    = javascript_include_tag "bootstrap-ie"
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-%body
-  = yield
+  %body
+    = render "layouts/navbar"
+    .container
+      .bootstrap-flash
+        - flash.each do |name, msg|
+          = content_tag :div, class: "alert alert-#{name == :error ? "danger" : "success" } alert-dismissable" do
+            %button.close{type: "button", data: {dismiss: "alert"}, aria: {hidden: "true"} } &times;
+            = msg
+      = yield
