Adds support for title helpers.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -16,7 +16,7 @@
           %span.addon GitHub
       %li{class: (params[:controller] == "dashboard") ? "active" : nil}
         %a{href: "#"}
-          %i.glyphicon.glyphicon-calendar
+          %i.glyphicon.glyphicon-home
           My Dashboard
       %li{class: (params[:controller] == "articles") ? "active" : nil}
         %a{href: "#"}
