Stubs out article resource and adds Simple Form. #4.
Creates a basic article model.

Adds support for Simple Form to play nicely with Bootstrap 3.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -19,7 +19,7 @@
           %i.glyphicon.glyphicon-home
           My Dashboard
       %li{class: (params[:controller] == "articles") ? "active" : nil}
-        %a{href: "#"}
+        %a{href: articles_path}
           %i.glyphicon.glyphicon-list-alt
           Articles
     .navbar-form.navbar-left{role: "search"}
