--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -6,7 +6,7 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    %a.navbar-brand{href: "#"} MarkHolmberg.com
+    %a.navbar-brand{href: root_path} MarkHolmberg.com
   / Collect the nav links, forms, and other content for toggling
   #bs-example-navbar-collapse-1.collapse.navbar-collapse
     %ul.nav.navbar-nav
@@ -15,7 +15,7 @@
           = image_tag("favicon_github.png")
           %span.addon GitHub
       %li{class: (params[:controller] == "dashboard") ? "active" : nil}
-        %a{href: "#"}
+        %a{href: dashboard_path}
           %i.glyphicon.glyphicon-home
           My Dashboard
       %li{class: (params[:controller] == "articles") ? "active" : nil}
@@ -32,7 +32,7 @@
           %b.caret
         %ul.dropdown-menu
           %li
-            %a{href: "#"}
+            %a{href: dashboard_path}
               %i.glyphicon.glyphicon-home
               Dashboard
           %li
