--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,27 +1,3 @@
 - title "Listing Articles"
 
-= link_to 'New Article', new_article_path
-
-%table.table.table-striped.table-hover
-  %thead
-    %tr
-      %th Title
-      %th Permalink
-      %th Excerpt
-      %th Content
-      %th Published at
-      %th
-      %th
-      %th
-
-  %tbody
-    - @articles.each do |article|
-      %tr
-        %td= article.title
-        %td= article.permalink
-        %td= article.excerpt
-        %td= article.content
-        %td= article.published_at
-        %td= link_to 'Show', article
-        %td= link_to 'Edit', edit_article_path(article)
-        %td= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }
+= render @articles
