--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,3 +1,10 @@
 - title "Listing Articles"
 
+- content_for :kaminari_per_page do
+  = form_tag nil, class: "inline form-inline", method: :get do
+    .form-group
+      = select_tag :per_page, options_for_select(per_page_options, selected: params[:per_page]), id: "article_per_page", class: 'form-control'
+
+= paginate @articles
+
 = render @articles
