Adds support for CanCan. #9.

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,6 +5,9 @@
     .form-group
       = select_tag :per_page, options_for_select(per_page_options, selected: params[:per_page]), id: "article_per_page", class: 'form-control'
 
+- if can?(:create, Article)
+  = link_to 'New Article', new_article_path
+
 = paginate @articles
 
 = render @articles
