Upgrades Twitter Bootstrap to the right gem. #2.

--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -5,7 +5,7 @@
     %h4.media-heading
       = link_to article.title, article
       %div.comments_count.inline
-        %i.glyphicon.glyphicon-comment
+        %span.glyphicon.glyphicon-comment
         %span.inline-block 1 Comment
     %div
       %code.author= article.user.name
