--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,7 +13,7 @@
   = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.button :submit, "Update"
+      = f.button :submit, "Update", class: 'btn btn-primary'
   .form-group
     .col-sm-4.col-sm-offset-2
       %small
