--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,11 +18,11 @@
         %td.action-button
           .pull-right
             = link_to edit_user_path(@user), class: 'btn btn-default' do
-              %i.glyphicon.glyphicon-pencil
+              %span.glyphicon.glyphicon-pencil
               Edit
       - if can?(:destroy, @user)
         %td.action-button
           .pull-right
             = link_to @user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do
-              %i.glyphicon.glyphicon-remove
+              %span.glyphicon.glyphicon-remove
               Remove
