--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -26,7 +26,7 @@
 
   %fieldset
     %legend
-      %i.icon-comment
+      %span.glyphicon.glyphicon-comment
       %span.inline#article_comments_legend 1 Comment
     %div
       - if current_user
